# aave-collaterals-bot

./: .dockerignore  .env.example  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  cspell.json  docker-compose.yml  pyproject.toml
.github/workflows/: build-image.yml  ci-dev.yml  ci-prod.yml  ci-staging.yml  linters.yml  prepare-release.yml  promtool.yml
alertmanager/: alertmanager.yml
alertmanager-discord/: alertmanager-discord.yml
grafana/: dashboard.json  status.json
grafana/dashboards/: arbwsteth.json  asteth.json  awsteth.json  dashboard.json  dashboards.yml  status.json  stmatic.json
grafana/datasources/: datasources.yml
prometheus/: prometheus.yml  status.rule  status.test  zones_changes.rule  zones_changes.test
prometheus/scrape_config/: arbitrum.yml  collaterals.yml  mainnet.yml  polygon.yml
src/: aaveparser.py  analytics.py  bot.py  config.py  eth.py  main.py  metrics.py  middleware.py
src/abi/: aave-oracle-abi.json
src/bot/: __init__.py  aaveparser.py  abi.py  analytics.py  bins.py  bot.py  config.py  consts.py  eth.py  http.py  metrics.py  middleware.py  structs.py  worker.py
src/bot/abi/: aave-weth-var-debt-abi.json
src/bot/abis/: LendingPool.json  Oracle.json  PoolAddressesProvider.json
