[tool.poetry]
name = "aave-collaterals-bot"
description = "Prometheus+Alertmanager driven AAVE stETH collaterals monitoring bot"
version = "1.2.0"
authors = [ "madlabman <madlabman@mail.ru>" ]
license = "apache-2.0"
homepage= "https://github.com/lidofinance/aave-collaterals-bot"
repository = "https://github.com/lidofinance/aave-collaterals-bot"

[tool.poetry.dependencies]
python = "^3.10"
web3 = "5.29.1"
prometheus-client = "^0.13.1"
retry = "^0.9.2"
urllib3 = "^1.26.9"
pandas = "^1.4.1"
unsync = "^1.4.0"
numpy = "^1.22.3"
python-json-logger = "^2.0.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pylint = "^2.13.5"
isort = "^5.10.1"

[tool.pylint.format]
max-line-length = 120
max-module-lines = 1000
good-names = "i,j,df,ex"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.py$'
exclude = '''
(
      \.git
    | \.venv
    | /__pycache__/
)
'''

[tool.isort]
profile = "black"
line_length = 120
